--- a/style.css
+++ b/style.css
@@ -83,43 +83,20 @@ body {
     transform: translateY(0);
   }
 
-  .grid-container {
-    display: grid;
+  .board {
     width: 500px;
     height: 500px;
+    display: grid;
     background-color: white;
     box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
     margin-left: 100px;
   }
 
-  .slideContainer {
-    width: 100%;
-  }
-
-
-  .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 13px;
-    background:white;
-    outline: none;
+  p {
+    margin-top: 10px;
     opacity: 0.7;
-    -webkit-transition: 0.2s;
-    transition:  opacity 0.2s;
-    border-radius: 12px;
-    box-shadow: 0px 1px 10px 1px black;
+    font-size: 30px;
   }
 
-  .slider:hover {
-    opacity: 1;
-  }
 
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 30px;
-    height: 30px;
-    background: black;
-    border-radius: 50%;
-    cursor: pointer;
-  }
+
